# cpp-cmake-testing-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake_memcheck.yml
contrib/: CMakeLists.txt
tests/: CMakeLists.txt  runner_tests.cpp
